--- a/lite/examples/image_classification/android/app/src/main/AndroidManifest.xml
+++ b/lite/examples/image_classification/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.tensorflow.lite.examples.classification">
 
-    <uses-sdk
-        android:minSdkVersion="19"
-        android:targetSdkVersion="21" />
+    <uses-sdk android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.CAMERA" />
 
