--- a/lite/examples/image_classification/android/app/build.gradle
+++ b/lite/examples/image_classification/android/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-
+    implementation "com.airbnb.android:lottie:2.7.0"
 
     // Build off of nightly TensorFlow Lite
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
