--- a/lite/examples/image_classification/android/app/src/main/AndroidManifest.xml
+++ b/lite/examples/image_classification/android/app/src/main/AndroidManifest.xml
@@ -1,29 +1,40 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.tensorflow.lite.examples.classification">
+package="org.tensorflow.lite.examples.classification">
 
-    <uses-sdk android:targetSdkVersion="21" />
+<uses-sdk android:targetSdkVersion="21" />
 
-    <uses-permission android:name="android.permission.CAMERA" />
+<!-- To access Google+ APIs: -->
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+<uses-feature android:name="android.hardware.camera" />
+<uses-feature android:name="android.hardware.camera.autofocus" />
 
+<application
+    android:allowBackup="true"
+    android:icon="@drawable/ic_launcher"
+    android:label="@string/activity_name_classification"
+    android:roundIcon="@drawable/ic_launcher"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+    <activity
+        android:name="org.tensorflow.lite.examples.classification.MainActivity"
+        android:label="@string/title_activity_main"
+        android:theme="@style/AppTheme.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+    <activity
+        android:name=".ClassifierActivity"
         android:label="@string/activity_name_classification"
-        android:roundIcon="@drawable/ic_launcher"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".ClassifierActivity"
-            android:label="@string/activity_name_classification"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        android:screenOrientation="portrait"
+        android:parentActivityName=".MainActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="org.tensorflow.lite.examples.classification.MainActivity" />
+    </activity>
+</application>
 </manifest>
