--- a/lite/examples/image_classification/android/app/src/main/AndroidManifest.xml
+++ b/lite/examples/image_classification/android/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@ package="org.tensorflow.lite.examples.classification">
 
 <application
     android:allowBackup="true"
-    android:icon="@drawable/ic_launcher"
+    android:icon="@drawable/recycle_bin"
     android:label="@string/activity_name_classification"
-    android:roundIcon="@drawable/ic_launcher"
+    android:roundIcon="@drawable/recycle_bin"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
 
